--- a/HelloGL/HelloGL/HelloGL.vcxproj
+++ b/HelloGL/HelloGL/HelloGL.vcxproj
@@ -154,7 +154,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="HelloGL.cpp" />
+    <ClCompile Include="MoveObj.cpp" />
+    <ClCompile Include="MYGLFunction.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="StaticObj.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Enemy.h" />
+    <ClInclude Include="GameObject.h" />
+    <ClInclude Include="MoveObj.h" />
+    <ClInclude Include="MyGLFunction.h" />
+    <ClInclude Include="MyHeaderSet.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="StaticObj.h" />
+    <ClInclude Include="TypeHeader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
